# learning_minimal

./: .gitignore
4p3v/: CMakeCache.txt  Makefile  cmake_install.cmake  train.sh
4p3v/src/: Makefile  cmake_install.cmake
5p2v/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  evaluation.py  hgfd  lgbm.py  qwq.txt  sample_data.py  test.sh  train.sh  train_nn.py
5p2v/MODEL/: X_train.txt  Y_train.txt  Y_val.txt  anchors.txt
5p2v/models/mlp/: ckpt_1.pt  ckpt_10.pt  ckpt_13.pt  ckpt_16.pt  ckpt_19.pt  ckpt_22.pt  ckpt_25.pt  ckpt_28.pt  ckpt_31.pt  ckpt_34.pt  ckpt_37.pt  ckpt_4.pt  ckpt_40.pt  ckpt_43.pt  ckpt_46.pt  ckpt_49.pt  ckpt_52.pt  ckpt_55.pt  ckpt_58.pt  ckpt_61.pt  ckpt_64.pt  ckpt_67.pt  ckpt_7.pt  ckpt_70.pt  ckpt_73.pt  ckpt_76.pt  ckpt_79.pt
5p2v/networks/mlp/: config.yaml  mlp.py
5p2v/networks/mlp_mixer/: config.yaml  mlp_mixer.py
5p2v/networks/transformer/: config.yaml  transformer.py
5p2v/result/mlp/: hidden_500.txt
5p2v/src/: Makefile  anchors.cxx  cmake_install.cmake  connectivity.cxx  evaluate.cxx  evaluate_T.cxx  labels.cxx
5p2v/wandb/: latest-run
5p2v/wandb/run-20230615_160426-7rntra4j/: run-7rntra4j.wandb
5p2v/wandb/run-20230615_160426-7rntra4j/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
